deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: users-service-ns
  labels:
    app: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
      - name: users-service
       
        image: acrneudevall.azurecr.io/users-service:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: users-service-ns
spec:
  selector:
    app: users-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress
  namespace: users-service-ns
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - users.pecarmo.pt
    secretName: cloudflare-origin-tls-secret
  rules:
  - host: users.pecarmo.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 80
